Adding a phrase animation and a flip effect to the card

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <ul class="header__list">
                     <li><a class="active" href="#!">HOME</a></li>
                     <li><a href="#!">PAGES</a></li>
-                    <li><a href="#!">OUR OFFER</a></li>
+                    <li><a href="#out_offer">OUR OFFER</a></li>
                     <li><a href="#!">PRIGING</a></li>
-                    <li><a href="#!">SHOP</a></li>
+                    <li><a href="#shop">SHOP</a></li>
                 </ul>
             </nav>
             <a href="#!" class="btn">ORDER NOW</a>
@@ -40,34 +40,116 @@
             </div>
         </section>
 
-        <section class="food-list">
+        <section id="shop" class="food-list">
             <div class="container">
-                <div class="food-list__card">
-                    <img src="./images/food-list-1.jpg" alt="" class="food-list__images">
-                    <div class="food-list__text-wrappeer">
-                        <h4 class="food-list__title">Chicken Paella</h4>
-                        <p class="food-list__desc">We just don't make and sell food.Good food warms.</p>
+
+                <!-- Chicken Paella -->
+                <div class="food-list__card-wrapper">
+                    <div class="food-list__card-flip">
+                        <div class="food-list__card--front">
+                            <img src="./images/food-list-1.jpg" alt="" class="food-list__images">
+                            <div class="food-list__text-wrappeer">
+                                <h4 class="food-list__title">Chicken Paella</h4>
+                                <p class="food-list__desc">We just don't make and sell food. Good food warms.</p>
+                            </div>
+                        </div>
+                        <div class="food-list__card--back">
+                            <div class="food-list__back-content">
+                                <h4 class="food-list__title">Composition:</h4>
+                                <ul class="food-list__ingredients">
+                                    <li>Chicken</li>
+                                    <li>Basmati rice</li>
+                                    <li>Saffron</li>
+                                    <li>Paprika</li>
+                                    <li>Green peas</li>
+                                    <li>Pepper, onion, garlic</li>
+                                </ul>
+                                <p class="food-list__back-note">Cooking time: 45 minutes · 380 kcal</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="food-list__card">
-                    <img src="./images/food-list-2.jpg" alt="" class="food-list__images">
-                    <div class="food-list__text-wrappeer">
-                        <h4 class="food-list__title">Taco Del Mar</h4>
-                        <p class="food-list__desc">Taco Del Mar brings the best out of Mexican cuisine with fresh.</p>
+
+                <!-- Taco Del Mar -->
+                <div class="food-list__card-wrapper">
+                    <div class="food-list__card-flip">
+                        <div class="food-list__card--front">
+                            <img src="./images/food-list-2.jpg" alt="" class="food-list__images">
+                            <div class="food-list__text-wrappeer">
+                                <h4 class="food-list__title">Taco Del Mar</h4>
+                                <p class="food-list__desc">Taco Del Mar brings the best out of Mexican cuisine with
+                                    fresh ingredients.</p>
+                            </div>
+                        </div>
+                        <div class="food-list__card--back">
+                            <div class="food-list__back-content">
+                                <h4 class="food-list__title">Composition:</h4>
+                                <ul class="food-list__ingredients">
+                                    <li>Taco shell</li>
+                                    <li>Beef</li>
+                                    <li>Lettuce</li>
+                                    <li>Cheese</li>
+                                    <li>Tomato</li>
+                                    <li>Salsa</li>
+                                </ul>
+                                <p class="food-list__back-note">Cooking time: 30 minutes · 320 kcal</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="food-list__card">
-                    <img src="./images/food-list-3.jpg" alt="" class="food-list__images">
-                    <div class="food-list__text-wrappeer">
-                        <h4 class="food-list__title">Bon Au Pain</h4>
-                        <p class="food-list__desc">Bon Au Pain is a pioneer in the healthy fast food scene.</p>
+
+                <!-- Bon Au Pain -->
+                <div class="food-list__card-wrapper">
+                    <div class="food-list__card-flip">
+                        <div class="food-list__card--front">
+                            <img src="./images/food-list-3.jpg" alt="" class="food-list__images">
+                            <div class="food-list__text-wrappeer">
+                                <h4 class="food-list__title">Bon Au Pain</h4>
+                                <p class="food-list__desc">Bon Au Pain is a pioneer in the healthy fast food scene.</p>
+                            </div>
+                        </div>
+                        <div class="food-list__card--back">
+                            <div class="food-list__back-content">
+                                <h4 class="food-list__title">Composition:</h4>
+                                <ul class="food-list__ingredients">
+                                    <li>Whole grain bread</li>
+                                    <li>Turkey</li>
+                                    <li>Avocado</li>
+                                    <li>Lettuce</li>
+                                    <li>Cheese</li>
+                                    <li>Tomato</li>
+                                </ul>
+                                <p class="food-list__back-note">Cooking time: 15 minutes · 250 kcal</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="food-list__card">
-                    <img src="./images/food-list-4.jpg" alt="" class="food-list__images">
-                    <div class="food-list__text-wrappeer">
-                        <h4 class="food-list__title">Pizza Hut.</h4>
-                        <p class="food-list__desc">Although the Pizza Hut Menu Prices have tumbled over the years.</p>
+
+                <!-- Pizza Hut -->
+                <div class="food-list__card-wrapper">
+                    <div class="food-list__card-flip">
+                        <div class="food-list__card--front">
+                            <img src="./images/food-list-4.jpg" alt="" class="food-list__images">
+                            <div class="food-list__text-wrappeer">
+                                <h4 class="food-list__title">Pizza Hut</h4>
+                                <p class="food-list__desc">Although the Pizza Hut Menu Prices have changed over the
+                                    years, the taste remains.</p>
+                            </div>
+                        </div>
+                        <div class="food-list__card--back">
+                            <div class="food-list__back-content">
+                                <h4 class="food-list__title">Composition:</h4>
+                                <ul class="food-list__ingredients">
+                                    <li>Pizza dough</li>
+                                    <li>Tomato sauce</li>
+                                    <li>Mozzarella</li>
+                                    <li>Pepperoni</li>
+                                    <li>Mushrooms</li>
+                                    <li>Olives</li>
+                                </ul>
+                                <p class="food-list__back-note">Cooking time: 20 minutes · 400 kcal</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -85,7 +167,7 @@
                 </div>
             </div>
         </section>
-        <section class="product">
+        <section id="out_offer" class="product">
             <div class="container">
                 <div class="product__card card-queen">
                     <h4 class="product__title">Dairy Queen</h4>
@@ -119,7 +201,23 @@
         </section>
         <div class="feedback">
             <div class="container">
-                <img src="./images/feedback.png" alt="" class="feedback__img">
+                <!-- <img src="./images/feedback.png" alt="" class="feedback__img"> -->
+                <div class="feedback-routed-img">
+                    <div class="feedback__rad-big">
+
+                        <div class="orbit">
+                            <img src="./images/feedback/min_img_1.svg" alt="Фото" class="feedback__img" />
+                            <img src="./images/feedback/min_img_3.svg" alt="Фото" class="feedback__img" />
+                            <img src="./images/feedback/min-img_2.svg" alt="Фото" class="feedback__img" />
+                            <img src="./images/feedback/min_img_4.svg" alt="Фото" class="feedback__img" />
+                        </div>
+
+                        <div class="feedback__rad-min">
+                            <img src="./images/feedback/big-img.svg" alt="Фото" class="feedback__img-big"></img>
+                        </div>
+
+                    </div>
+                </div>
 
                 <blockquote class="feedback__text">
                     <p class="feedback__desc">Thanks a lot for the prompt service.
@@ -172,14 +270,24 @@
             <div class="footer__socials">
                 <p class="footer__title">Social Handles</p>
                 <div class="footer__socials-icons">
-                    <a href="#!" class="footer__sochials-link"><img src="./images/icons/socials/facebook.png" alt=""></a>
+                    <a href="#!" class="footer__sochials-link"><img src="./images/icons/socials/facebook.png"
+                            alt=""></a>
                     <a href="#!" class="footer__sochials-link"><img src="./images/icons/socials/twitter.png" alt=""></a>
-                    <a href="#!" class="footer__sochials-link"><img src="./images/icons/socials/instagram.png" alt=""></a>
-                    <a href="#!" class="footer__sochials-link"><img src="./images/icons/socials/linkedin.png" alt=""></a>
+                    <a href="#!" class="footer__sochials-link"><img src="./images/icons/socials/instagram.png"
+                            alt=""></a>
+                    <a href="#!" class="footer__sochials-link"><img src="./images/icons/socials/linkedin.png"
+                            alt=""></a>
                 </div>
             </div>
         </div>
     </footer>
 </body>
+<script>
+    document.querySelectorAll('.food-list__card-wrapper').forEach(card => {
+        card.addEventListener('click', function () {
+            this.classList.toggle('active');
+        });
+    });
+</script>
 
 </html>
